fix: updated stackoverflow data

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,12 +11,13 @@
   min-width: 1024px;
 	
   /* Set up proportionate scaling */
-  width: 100%;
+  width: 100% !important;
   height: auto;
 	
   /* Set up positioning */
   position: absolute;
   //top: 0;
   left: 0;
+  right: 0;
 
 }
