--- a/src/app/shared/portfolio-details/portfolio-details.component.scss
+++ b/src/app/shared/portfolio-details/portfolio-details.component.scss
@@ -46,3 +46,12 @@
         justify-content: end;
         font-size: xx-small;
 }
+
+
+.stackoverflow-medals-col {
+    display: inline-flex;
+}
+
+.github-follow {
+    display: inline-flex;
+}
