--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,7 @@
 .icons i:hover {
     color: #7ce3ff;
 }
+
+body {
+    overflow-x: hidden !important;
+}
